--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
     "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "1.0.0"
+    "whatwg-fetch": "1.0.0",
+    "truffle": "*",
+    "testrpc": "*"
   },
   "dependencies": {
     "react": "^15.4.2",
@@ -60,7 +62,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "ci": "truffle test"
   },
   "jest": {
     "collectCoverageFrom": [
