--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,14 +27,13 @@ jobs:
           - v1-dependencies-
 
       - run: yarn install
-      - run: testrpc
-
+      
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
         
       # run tests!
-      - run: truffle test
+      - run: yarn test
 
 
