--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,8 +33,9 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      - run: yarn testrpc 
-             
+      - run: yarn ganache-cli
+          background: true
+
       # run tests!
       - run: yarn truffle test
 
