--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "webpack-manifest-plugin": "1.1.0",
     "whatwg-fetch": "1.0.0",
     "truffle": "*",
-    "testrpc": "*"
+    "ganache-cli": "*"
   },
   "dependencies": {
     "react": "^15.4.2",
